solution/app/auth-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
      - image: 561341012850.dkr.ecr.us-east-1.amazonaws.com/team62-auth-api
        name: auth-api
        ports:
        - containerPort: 8081
          name: authport
      restartPolicy: Always
